--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.application.name=SERVICE-REGISTRY
+server.port=8761
 
+#By default a eureka server is a eureka client.
+#Disable as eureka client
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
